--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,8 @@
   box-sizing: border-box;
 }
 body {
-  background-color: rgba(0, 0, 0, 0.8);
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  color: white;
+  background-color: rgba(255, 255, 255, 0.8);
+  font-family: 'Roboto', sans-serif;
 }
 .mircophone-container {
   display: flex;
@@ -16,20 +15,12 @@ body {
   height: 50vh;
 }
 .microphone-icon-container {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  background-image: linear-gradient(128deg, #ffffff, #647c88);
   padding: 20px;
   margin-right: 20px;
   position: relative;
   cursor: pointer;
 }
 .microphone-icon-container.listening::before {
-  content: "";
-  width: 100px;
-  height: 100px;
-  background-color: #ffffff81;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -69,7 +60,6 @@ body {
 .microphone-result-container {
   text-align: center;
   height: 50vh;
-
   display: flex;
   flex-direction: column;
   justify-content: space-between;
