--- a/src/App.css
+++ b/src/App.css
@@ -79,8 +79,8 @@ body {
 .microphone-result-text {
   margin-bottom: 30px;
   overflow-y: auto;
-  width: 100%;
-  text-align: center;
+  width: 70%;
+  /* margin: auto; */
 }
 .microphone-reset {
   border: 1px solid #fff;
@@ -100,5 +100,14 @@ body {
     background: beige;
     padding: 12px;
     border-radius: 10px;
-    width: inherit;
+    width: max-content;
+    float: left;
+}
+.query{
+  text-align: right;
+  background: beige;
+  padding: 12px;
+  border-radius: 10px;
+  width: max-content;
+  float: right;
 }
