--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,9 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 .mircophone-container {
-  
   align-items: center;
   display: flex;
-  height: 50vh;
+  height: 15vh;
   justify-content: center;
   width: 98vw;
   margin: auto;
@@ -71,7 +70,7 @@ body {
   justify-content: space-between;
   padding-bottom: 30px;
   text-align: center;
-  width: 70vw;
+  width: 100vw;
   overflow: hidden;
   margin: auto;
 
@@ -102,6 +101,8 @@ body {
     border-radius: 10px;
     width: max-content;
     float: left;
+    margin: 5px 0;
+    width: 100%;
 }
 .query{
   text-align: right;
@@ -110,4 +111,5 @@ body {
   border-radius: 10px;
   width: max-content;
   float: right;
+  margin: 5px 0;
 }
